--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,8 @@
 }
 
 
-body {
+* {
   margin: 0;
   font-family: var(--font);
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+ 
 }
